css/PixelPainter.css
body {
	background-color: white;
}

.outer-frame {
  height: auto;
  width: auto;
}

.control {
  background-color: gray;
  height: 100%;
  width: 300px;
  display: inline-block;
  overflow-y: auto;
}

.grid {
  background-color: #4E4E4E;
  width: calc(100% - 300px - 20px);
  height: calc(100% - 20px);
  display: inline-block;
  padding: 10px;
  overflow-y: auto;
  cursor: crosshair;
}
.palette {
  background-color: white;
  height: 600px;
  width: calc(100% - 10px);
  margin: 5px;
}

.colors {
  width: 80px;
  height: 80px;
  cursor: pointer;
  display: inline-block;
}

.buttons {
  background-color: white;
  height: calc(100% - 600px - 15px);
  width: calc(100% - 10px);
  margin: 5px;
  max-width: 100%;
  max-height: 100%;
}

.paint-grid {
  margin: auto;
  float: left;
}

.rows {
  display: block;
}

.pixels {
  display: inline-block;
  height: 10px;
  width: 10px;
  background-color: white;
}

.pixels:hover {
  border: solid 1px black;
  height: 8px;
  width: 8px;
}

